root/sache/somedoc/docmost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: docmost
  name: docmost
  namespace: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docmost
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: docmost
    spec:
      containers:
        - env:
            - name: APP_SECRET
              value: bb46463bcb156f66cceb80330c83934f6ecf413a140afc7ac43badf051139ab0
            - name: APP_URL
              value: https://docmost.phonkd.net
            - name: DATABASE_URL
              value: postgresql://docmost:STRONG_DB_PASSWORD@docmost-db:5432/docmost?schema=public
            - name: REDIS_URL
              value: redis://docmost-redis:6379
          image: docmost/docmost:latest
          name: docmost
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data/storage
              name: docmost
      restartPolicy: Always
      volumes:
        - name: docmost
          persistentVolumeClaim:
            claimName: docmost
