root/sache/somedoc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: somedoc
  namespace: docmost
spec:
  ingressClassName: nginx-ingress-ext
  rules:
    - host: docmost.phonkd.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: docmost
              port:
                number: 3000
